--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -6,5 +6,9 @@
   "action": {
     "default_popup": "hello.html",
     "default_icon": "./icons/extension_icon.png"
-  }
+  },
+  "background": {
+    "service_worker": "./scripts/background.js"
+  },
+  "permissions": ["activeTab", "scripting"]
 }
