refactor: enhance schedule parsing and UI improvements

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -10,5 +10,8 @@
   "background": {
     "service_worker": "./scripts/background.js"
   },
-  "permissions": ["activeTab", "scripting"]
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ]
 }
